GH-3396: upgrade solr and lucene dependencies Signed-off-by:Bart Hanssens <bart.hanssens@bosa.fgov.be>